--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: [main, develop, 'release/*']
   schedule:
-    - cron: '0 3 * * 0'  # weekly audit
+    - cron: '0 3 * * 0'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -17,9 +17,6 @@ defaults:
     shell: bash
 
 jobs:
-  # ============================================================
-  # 1) std job: audit • fmt • clippy • build • test
-  # ============================================================
   build-test-std:
     name: Build & test (${{ matrix.os }}, ${{ matrix.toolchain }})
     runs-on: ${{ matrix.os }}
@@ -35,19 +32,14 @@ jobs:
       CARGO_INCREMENTAL: 0
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
+      - uses: actions/checkout@v4
       - name: Set up Rust toolchain (${{ matrix.toolchain }})
         run: |
-          set -euxo pipefail
           rustup set profile minimal
           rustup update ${{ matrix.toolchain }}
           rustup default ${{ matrix.toolchain }}
           rustup component add rustfmt clippy
-
-      - name: Cache cargo registries, target and advisory DB
-        uses: actions/cache@v4
+      - uses: actions/cache@v4
         with:
           path: |
             ~/.cargo/registry
@@ -55,176 +47,154 @@ jobs:
             ~/.cargo/advisory-db
             target
           key: ${{ runner.os }}-cargo-${{ matrix.toolchain }}-${{ hashFiles('**/Cargo.toml') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-${{ matrix.toolchain }}-
-            ${{ runner.os }}-cargo-
+      - run: rustc -Vv && cargo -V
+      - if: ${{ matrix.os == 'ubuntu-latest' && matrix.toolchain == 'nightly' }}
+        run: cargo install --locked cargo-audit || echo "cargo-audit already installed"
+      - if: ${{ matrix.os == 'ubuntu-latest' && matrix.toolchain == 'nightly' }}
+        run: cargo audit
+      - run: cargo fmt --all -- --check
+      - run: cargo clippy --workspace --all-targets --all-features -- -D warnings
+      - run: cargo build --workspace --all-features
+      - run: cargo test --workspace --all-features --all-targets -- --nocapture
 
-      - name: Show Rust versions
-        run: |
-          set -euxo pipefail
-          rustc -Vv
-          cargo -V
-
-      - name: Install cargo-audit (ubuntu-nightly only)
-        if: ${{ matrix.os == 'ubuntu-latest' && matrix.toolchain == 'nightly' }}
-        run: |
-          set -euxo pipefail
-          cargo install --locked cargo-audit || echo "cargo-audit already installed"
-
-      - name: Run cargo audit (ubuntu-nightly only)
-        if: ${{ matrix.os == 'ubuntu-latest' && matrix.toolchain == 'nightly' }}
-        run: |
-          set -euxo pipefail
-          cargo audit
-
-      - name: Check code format
-        run: |
-          set -euxo pipefail
-          cargo fmt --all -- --check
-
-      - name: Run Clippy (deny warnings)
-        run: |
-          set -euxo pipefail
-          cargo clippy --workspace --all-targets --all-features -- -D warnings
-
-      - name: Build workspace
-        run: |
-          set -euxo pipefail
-          cargo build --workspace --all-features
-
-      - name: Run tests
-        run: |
-          set -euxo pipefail
-          cargo test --workspace --all-features --all-targets -- --nocapture
-
-
-  # ============================================================
-  # 2) no_std job: detect (Nu) + compile (core & alloc) with solid outputs
-  # ============================================================
   no-std:
     name: no_std (Nu detect core/alloc → build)
     runs-on: ubuntu-latest
-  
     env:
       CARGO_TERM_COLOR: always
       RUSTFLAGS: -D warnings
       RUSTDOCFLAGS: -D warnings
       CARGO_INCREMENTAL: 0
-      
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
 
-      - name: Setup Nushell
-        uses: hustcer/setup-nu@v3
+    steps:
+      - uses: actions/checkout@v4
+      - uses: hustcer/setup-nu@v3
         with:
           version: '0.108.0'
-
-      - name: Toolchain + no_std target
-        shell: bash
+      - name: Toolchain + bare-metal target
         run: |
-          set -euxo pipefail
           rustup set profile minimal
           rustup update stable
           rustup default stable
           rustup target add x86_64-unknown-none
 
-      # ==========================================================
-      # detect-nostd (Nu → files)
-      # ==========================================================
-      - name: detect-nostd (Nu → files)
+      - name: detect-core-alloc (Nu → files)
         shell: nu {0}
         run: |
+          # Base dirs and metadata
           let base = ($env.RUNNER_TEMP | path join 'ci')
           mkdir $base | ignore
-
           let target_bare = "x86_64-unknown-none"
-          let meta = (cargo metadata --no-deps --format-version=1 | from json)
-          let members = $meta.workspace_members
-          let lib_kinds = [lib rlib staticlib cdylib dylib]
 
-          let pkgs = (
+          let meta = (cargo metadata --no-deps --format-version=1 | from json)
+
+          # Workspace members (IDs) → join back to `packages` by id
+          let members = $meta.workspace_members
+          let pkgs_ws = (
             $meta.packages
             | where {|p| $members | any {|m| $m == $p.id}}
-            | where {|p| $p.targets | any {|t| ($t.kind? | default []) | any {|k| $lib_kinds | any {|lk| $lk == $k}}}}
-            | get name
-            | uniq
           )
 
-          mut core_matrix = []
-          for name in $pkgs {
-            let pkg = ($meta.packages | where name == $name | first)
-            let feat_cols = (($pkg.features? | default {}) | columns)
-            let extra = ($feat_cols | where {|f| $f != "default" and $f != "std" and $f != "alloc"} | str join ",")
-            let args = if ($extra | is-empty) {"--no-default-features"} else {$"--no-default-features --features ($extra)"}
-            $core_matrix = ($core_matrix | append { pkg: $name, args: $args })
+          # Keep packages that are NOT "proc-macro only"
+          let pkgs_liblike = (
+            $pkgs_ws
+            | where {|p|
+                not (
+                  $p.targets | all {|t| $t.kind | any {|k| $k == 'proc-macro'}}
+                )
+              }
+            | select id name features targets
+            | sort-by name
+          )
+
+          # Debug: kinds seen & selection
+          ($pkgs_ws
+            | select name targets
+            | each {|p| { name: $p.name, kinds: ($p.targets | each {|t| $t.kind} | flatten | uniq | sort) }}
+          ) | to json | save --force ($base | path join 'targets_seen.json')
+
+          ($pkgs_liblike | select id name | to json) | save --force ($base | path join 'selected_ws_liblike.json')
+
+          # Helper: extras = all features except default/std/alloc
+          def to_extras [feat_map] {
+            let keys = (if ($feat_map == null) { [] } else { $feat_map | columns })
+            let extras = ($keys | where {|f| $f != 'default' and $f != 'std' and $f != 'alloc'} | sort | str join ',')
+            if ($extras | is-empty) { '' } else { $extras }
           }
 
-          $"($target_bare)" | save --force ($base | path join 'target_bare.txt')
-          ($pkgs | to json --raw) | save --force ($base | path join 'pkg_list.json')
-          ($core_matrix | to json --raw) | save --force ($base | path join 'core_matrix.json')
-
-          print "== no_std candidates (lib targets) =="
-          ($pkgs | each {|n| print $"- ($n)"} | ignore)
-          print $"core_matrix size: ($core_matrix | length)"
-
-      # ==========================================================
-      # detect-alloc (Nu → files)
-      # ==========================================================
-      - name: detect-alloc (Nu → files)
-        shell: nu {0}
-        run: |
-          let base = ($env.RUNNER_TEMP | path join 'ci')
-          let meta = (cargo metadata --no-deps --format-version=1 | from json)
-          let pkgs = (open ($base | path join 'pkg_list.json'))
-
+          # Build matrices from the same base
+          mut core_matrix = []
           mut alloc_matrix = []
-          for name in $pkgs {
-            let pkg = ($meta.packages | where name == $name | first)
-            let feat_cols = (($pkg.features? | default {}) | columns)
-            if ($feat_cols | any {|f| $f == "alloc"}) {
-              let extra = ($feat_cols | where {|f| $f != "default" and $f != "std" and $f != "alloc"} | str join ",")
-              let args = if ($extra | is-empty) {"--no-default-features --features alloc"} else {$"--no-default-features --features alloc,($extra)"}
-              $alloc_matrix = ($alloc_matrix | append { pkg: $name, args: $args })
+
+          for p in $pkgs_liblike {
+            let extras = (to_extras $p.features)
+            let core_args = if ($extras == '') { '--no-default-features' } else { $"--no-default-features --features ($extras)" }
+            $core_matrix = ($core_matrix | append { pkg: $p.name, args: $core_args })
+
+            let keys = (if ($p.features == null) { [] } else { $p.features | columns })
+            if ($keys | any {|f| $f == 'alloc'}) {
+              let alloc_args = if ($extras == '') { '--no-default-features --features alloc' } else { $"--no-default-features --features alloc,($extras)" }
+              $alloc_matrix = ($alloc_matrix | append { pkg: $p.name, args: $alloc_args })
             }
           }
 
-          ($alloc_matrix | to json --raw) | save --force ($base | path join 'alloc_matrix.json')
-          print $"alloc_matrix size: ($alloc_matrix | length)"
+          # Persist
+          $target_bare | save --force ($base | path join 'target_bare.txt')
+          ($core_matrix  | to json) | save --force ($base | path join 'core_matrix.json')
+          ($alloc_matrix | to json) | save --force ($base | path join 'alloc_matrix.json')
 
-      # ==========================================================
-      # Debug matrices (Nu)
-      # ==========================================================
+          # Immediate dump for visibility
+          print '== WORKSPACE MEMBERS (ids) =='
+          $members | each {|m| print $"- ($m)"} | ignore
+
+          print '== SELECTED LIB-LIKE PACKAGES =='
+          ($pkgs_liblike | get name | each {|n| print $"- ($n)"} | ignore)
+
+          print 'CORE_MATRIX (built now):'
+          if ($core_matrix | is-empty) { print '(empty)' } else { $core_matrix | table }
+
+          print 'ALLOC_MATRIX (built now):'
+          if ($alloc_matrix | is-empty) { print '(empty)' } else { $alloc_matrix | table }
+
+          # Sanity check: ensure parsing appears in CORE
+          let core_names = ($core_matrix | get pkg | default [])
+          if (not ($core_names | any {|n| $n == 'win-security-identifier-parsing'})) {
+            print 'ERR: parsing missing from CORE_MATRIX → forcing inclusion.'
+            $core_matrix = ($core_matrix | append { pkg: 'win-security-identifier-parsing', args: '--no-default-features' })
+            ($core_matrix | to json) | save --force ($base | path join 'core_matrix.json')
+          }
+
+          if (($core_matrix | is-empty) and ($alloc_matrix | is-empty)) { print 'FATAL: Both CORE_MATRIX and ALLOC_MATRIX are empty.'; exit 1 }
+
       - name: Debug matrices (Nu)
         if: always()
         shell: nu {0}
         run: |
           let base = ($env.RUNNER_TEMP | path join 'ci')
-          print "CORE_MATRIX:"
-          open ($base | path join 'core_matrix.json') | table
-          print "ALLOC_MATRIX:"
-          if ($base | path join 'alloc_matrix.json' | path exists) {
-            open ($base | path join 'alloc_matrix.json') | table
-          } else {
-            [] | table
-          }
 
-      # ==========================================================
-      # Cargo check (no_std)
-      # ==========================================================
+          print 'TARGET KINDS SEEN:'
+          if ($base | path join 'targets_seen.json' | path exists) { open ($base | path join 'targets_seen.json') | table } else { print '(missing targets_seen.json)' }
+
+          print 'SELECTED LIB-LIKE PACKAGES:'
+          if ($base | path join 'selected_ws_liblike.json' | path exists) { open ($base | path join 'selected_ws_liblike.json') | table } else { print '(missing selected_ws_liblike.json)' }
+
+          print 'CORE_MATRIX:'
+          if ($base | path join 'core_matrix.json' | path exists) { let cm = open ($base | path join 'core_matrix.json'); if ($cm | is-empty) { print '(empty)' } else { $cm | table } } else { print '(missing)' }
+
+          print 'ALLOC_MATRIX:'
+          if ($base | path join 'alloc_matrix.json' | path exists) { let am = open ($base | path join 'alloc_matrix.json'); if ($am | is-empty) { print '(empty)' } else { $am | table } } else { print '(missing)' }
+
       - name: Cargo check (no_std) [Nu]
         shell: nu {0}
         run: |
           let base = ($env.RUNNER_TEMP | path join 'ci')
-          let TARGET = (open ($base | path join 'target_bare.txt') | decode utf-8 | str trim)
-          let core = (open ($base | path join 'core_matrix.json'))
+          let TARGET = (open --raw ($base | path join 'target_bare.txt') | str trim)
+
+          let core = (if ($base | path join 'core_matrix.json' | path exists) { open ($base | path join 'core_matrix.json') } else { [] })
           let alloc = (if ($base | path join 'alloc_matrix.json' | path exists) { open ($base | path join 'alloc_matrix.json') } else { [] })
           let final = ($core | append $alloc)
 
-          if ($final | is-empty) {
-            print "No no_std rows. Failing for visibility."
-            exit 1
-          }
+          if ($final | is-empty) { print 'No no_std rows. Failing for visibility.'; exit 1 }
 
           for row in $final {
             let pkg = $row.pkg
@@ -233,15 +203,13 @@ jobs:
             ^cargo check -p $pkg --target $TARGET ...$args
           }
 
-      # ==========================================================
-      # Cargo build (no_std, release)
-      # ==========================================================
       - name: Cargo build (no_std, release) [Nu]
         shell: nu {0}
         run: |
           let base = ($env.RUNNER_TEMP | path join 'ci')
-          let TARGET = (open ($base | path join 'target_bare.txt') | decode utf-8 | str trim)
-          let core = (open ($base | path join 'core_matrix.json'))
+          let TARGET = (open --raw ($base | path join 'target_bare.txt') | str trim)
+
+          let core = (if ($base | path join 'core_matrix.json' | path exists) { open ($base | path join 'core_matrix.json') } else { [] })
           let alloc = (if ($base | path join 'alloc_matrix.json' | path exists) { open ($base | path join 'alloc_matrix.json') } else { [] })
           let final = ($core | append $alloc)
 
