--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -146,7 +146,7 @@ jobs:
           MATRICES_B64: ${{ steps.detect.outputs.matrices_b64 }}
         run: |
           set -euo pipefail
-          printf '%s' "$MATRICES_B64" | nu .github/workflows/ci/no_std/check.nu
+          printf '%s' "$MATRICES_B64" | nu --stdin .github/workflows/ci/no_std/check.nu
 
       # BUILD — Bash decode | nu build.nu (stdin JSON; $TARGET via env)
       - name: Cargo build (no_std, release) via Nu stdin
@@ -155,4 +155,4 @@ jobs:
           MATRICES_B64: ${{ steps.detect.outputs.matrices_b64 }}
         run: |
           set -euo pipefail
-          printf '%s' "$MATRICES_B64" | nu .github/workflows/ci/no_std/build.nu
+          printf '%s' "$MATRICES_B64" | nu --stdin .github/workflows/ci/no_std/build.nu
