Common step using actions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -137,22 +137,13 @@ jobs:
 
           echo "== ALLOC_MATRIX =="
           printf '%s' "$COMBINED_JSON" | nu --stdin -c "from json | get alloc | table"
+          
+      - uses: ./.github/actions/build-and-check-nostd
+        with:
+          kind: core
+          matrices_b64: ${{ steps.detect.outputs.matrices_b64 }}
 
-
-      # CHECK — Bash decode | nu check.nu (stdin JSON; $TARGET via env)
-      - name: Cargo check (no_std) via Nu stdin
-        shell: bash
-        env:
-          MATRICES_B64: ${{ steps.detect.outputs.matrices_b64 }}
-        run: |
-          set -euo pipefail
-          printf '%s' "$MATRICES_B64" | nu --stdin .github/workflows/ci/no_std/check.nu
-
-      # BUILD — Bash decode | nu build.nu (stdin JSON; $TARGET via env)
-      - name: Cargo build (no_std, release) via Nu stdin
-        shell: bash
-        env:
-          MATRICES_B64: ${{ steps.detect.outputs.matrices_b64 }}
-        run: |
-          set -euo pipefail
-          printf '%s' "$MATRICES_B64" | nu --stdin .github/workflows/ci/no_std/build.nu
+      - uses: ./.github/actions/build-and-check-nostd
+        with:
+          kind: alloc
+          matrices_b64: ${{ steps.detect.outputs.matrices_b64 }}
