--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,23 +25,30 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         toolchain: [stable, nightly]
+        docsrs: [false, true]
+        exclude:
+          - toolchain: stable
+            docsrs: true
+          - toolchain: nightly
+            docsrs: false
     env:
       CARGO_TERM_COLOR: always
       RUSTFLAGS: -D warnings
-      RUSTDOCFLAGS: -D warnings
       CARGO_INCREMENTAL: 0
-    
+      # '--cfg docsrs' only on nightly builds
+      RUSTDOCFLAGS: ${{ matrix.docsrs && '--cfg docsrs -D warnings' || '-D warnings' }}
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-    
+
       - name: Install Rust toolchain (${{ matrix.toolchain }})
         run: |
           rustup set profile minimal
           rustup update ${{ matrix.toolchain }}
           rustup default ${{ matrix.toolchain }}
           rustup component add rustfmt clippy
-    
+
       - name: Cache cargo dependencies
         uses: actions/cache@v4
         with:
@@ -51,30 +58,31 @@ jobs:
             ~/.cargo/advisory-db
             target
           key: ${{ runner.os }}-cargo-${{ matrix.toolchain }}-${{ hashFiles('**/Cargo.toml') }}
-        
+
       - name: Show toolchain versions
         run: rustc -Vv && cargo -V
-        
+
       - name: Install cargo-audit (nightly Linux only)
         if: ${{ matrix.os == 'ubuntu-latest' && matrix.toolchain == 'nightly' }}
         run: cargo install cargo-audit || echo "cargo-audit already installed"
-        
+
       - name: Run cargo audit (nightly Linux only)
         if: ${{ matrix.os == 'ubuntu-latest' && matrix.toolchain == 'nightly' }}
         run: cargo audit
-        
+
       - name: Check formatting
         run: cargo fmt --all -- --check
-        
+
       - name: Run clippy (lint all targets)
         run: cargo clippy --workspace --all-targets --all-features -- -D warnings
-        
+
       - name: Build workspace
         run: cargo build --workspace --all-features
-        
+
       - name: Run tests
         run: cargo test --workspace --all-features --all-targets -- --nocapture
-      - name: Run documentation tests
+
+      - name: Build docs{{ matrix.docsrs && ' with docs.rs config' || '' }}
         run: cargo doc --workspace --all-features --no-deps
 
   no-std:
