--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ repository.workspace = true
 
 [features]
 default = ["std"]
-std = ["alloc", "parsing/std", "dep:smallvec", "serde?/std", "num_enum/std", "thiserror/std" ]
+std = ["alloc", "parsing/std", "dep:smallvec","dep:num_enum","dep:widestring", "serde?/std", "thiserror/std", "dep:windows-sys" ]
 alloc = ["serde?/alloc"]
 macro = ["dep:sid_macro"]
 serde = ["dep:serde", "dep:arrayvec"]
@@ -44,13 +44,13 @@ serde = { version = "1", optional = true , default-features = false}
 parsing = { workspace = true}
 thiserror = { workspace = true }
 arrayvec = { workspace = true, optional = true }
-num_enum = {version = "0.7", default-features = false}
 sid_macro = { workspace = true, optional = true }
 
 
 [target.'cfg(windows)'.dependencies]
-widestring = "1.0"
+widestring = {version="1.0", optional = true}
 smallvec = { version = "1.15", optional = true }
+num_enum = {version = "0.7", optional = true}
 
 [target.'cfg(windows)'.dependencies.windows-sys]
 version = "0.60"
@@ -60,6 +60,7 @@ features = [
   "Win32_Security",
   "Win32_System_Threading",
 ]
+optional = true
 
 
 [dev-dependencies]
