--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,11 +31,12 @@ repository.workspace = true
 
 
 [features]
-default = ["std"]
+default = ["std","windows_result"]
 std = ["alloc", "parsing/std", "dep:smallvec","dep:num_enum","dep:widestring", "serde?/std", "thiserror/std", "dep:windows-sys" ]
 alloc = ["serde?/alloc"]
 macro = ["dep:sid_macro"]
 serde = ["dep:serde", "dep:arrayvec"]
+windows_result=["dep:windows-result"]
 
 [dependencies]
 cfg-if = "1"
@@ -51,6 +52,7 @@ sid_macro = { workspace = true, optional = true }
 widestring = {version="1.0", optional = true}
 smallvec = { version = "1.15", optional = true }
 num_enum = {version = "0.7", optional = true}
+windows-result = {version = ">=0.1", optional = true}
 
 [target.'cfg(windows)'.dependencies.windows-sys]
 version = "0.60"
@@ -80,6 +82,7 @@ workspace = true
 [workspace.lints.rust]
 unused = "warn"
 future_incompatible = "deny"
+
 
 [workspace.lints.clippy]
 all = { level = "warn", priority = -1 }
