--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,13 +62,13 @@ jobs:
       - name: Show toolchain versions
         run: rustc -Vv && cargo -V
 
-      - name: Install cargo-audit (nightly Linux only)
+      - name: Install cargo-deny (nightly Linux only)
         if: ${{ matrix.os == 'ubuntu-latest' && matrix.toolchain == 'nightly' }}
-        run: cargo install cargo-audit || echo "cargo-audit already installed"
+        run: cargo install cargo-deny || echo "cargo-deny already installed"
 
-      - name: Run cargo audit (nightly Linux only)
+      - name: Run cargo deny (nightly Linux only)
         if: ${{ matrix.os == 'ubuntu-latest' && matrix.toolchain == 'nightly' }}
-        run: cargo audit
+        run: cargo deny check --show-stats
 
       - name: Check formatting
         run: cargo fmt --all -- --check
