--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-15, windows-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
         toolchain: [stable, nightly]
         docsrs: [false, true]
         exclude:
@@ -57,7 +57,8 @@ jobs:
             ~/.cargo/git
             ~/.cargo/advisory-db
             target
-          key: ${{ runner.os }}-cargo-${{ matrix.toolchain }}-${{ hashFiles('Cargo.lock') }}
+          # We use ${{ github.sha }} instead of hashfile because of an issue with the macos runner
+          key: ${{ runner.os }}-cargo-${{ matrix.toolchain }}-${{ github.sha }}
 
       - name: Show toolchain versions
         run: rustc -Vv && cargo -V
@@ -138,7 +139,8 @@ jobs:
             ~/.cargo/git
             ~/.cargo/advisory-db
             target
-          key: ${{ runner.os }}-cargo-stable-no_std-${{ hashFiles('Cargo.lock') }}
+          # We use ${{ github.sha }} instead of hashfile because of an issue with the macos runner
+          key: ${{ runner.os }}-cargo-stable-no_std-${{ github.sha }}
 
       - name: Install Nushell
         uses: hustcer/setup-nu@v3
